--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,7 +60,7 @@
     <string name="correct_answer">Correct Answer:</string>
     <string name="selected_answer">Selected Answer:</string>
     <string name="suggest_a_question">Suggest a question</string>
-    <string name="how_to_play">How to play</string>
+    <string name="how_to_play">Points on\nThe Daily Quiz</string>
     <string name="get_premium">Get Premium</string>
     <string name="league_was_deleted">League was deleted</string>
     <string name="change_it">Change it</string>
@@ -85,7 +85,7 @@
     <string name="second_place">Second Place</string>
     <string name="points">%1$s Point(s)</string>
     <string name="third_place">Third Place</string>
-    <string name="place">%1$s° Place</string>
+    <string name="place">%1$s</string>
     <string name="p">%1$sP</string>
     <string name="add_a_friend">Add a friend</string>
     <string name="add_user">Add User</string>
@@ -114,7 +114,7 @@
     <string name="impossible_stats">IMPOSSIBLE/</string>
     <string name="days_in_streak">Days in streak</string>
     <string name="how_to_play_the_bible_quiz">How to play The Bible Quiz?</string>
-    <string name="bible_quiz_description">In this game, you have 30 seconds to answer a single question. Choose the correct answer from 4 options. The game offers 4 difficulty levels:\n\n- Easy\n- Medium\n- Hard\n- Impossible\n\nYou can only attempt one question per day, and you have just one chance to get it right. Choose wisely!</string>
+    <string name="bible_quiz_description">In this game, you have 30 seconds to answer a single question. Choose the correct answer from 4 options. When you answer a question, you may gain or lose points, which will be reflected in your leagues and on the leaderboards. Here’s how it works:\nDifficulty - (Points if correct / wrong) \n\n- Easy (1/0).\n- Medium - (2/-1)\n- Hard - (3/-2)\n- Impossible (5/-3)\n\nYou can only attempt one question per day, and you have just one chance to get it right. Choose wisely!</string>
     <string name="leave_league">Leave League</string>
     <string name="are_you_sure_you_want_to_leave_this_league">Are you sure you want to leave this League? You will lose any point you\'ve gained</string>
     <string name="you_ve_left_the_league_successfully">You\'ve left the League successfully</string>
@@ -166,4 +166,10 @@
     <string name="medium">Medium</string>
     <string name="hard">Hard</string>
     <string name="impossible">Impossible</string>
+    <string name="no_google_account">Something went wrong. Apparently, no eligible Google account was found in this device.</string>
+    <string name="my_stats">My stats</string>
+    <string name="question">Question</string>
+    <string name="leaderboards">Leaderboards</string>
+    <string name="how_to_play_wordle">How to play Wordle</string>
+    <string name="word_puzzle_rules">Wordle is a popular word puzzle that gives you 6 attempts to guess a secret word. After each guess, any letters that appear in the word but are in the wrong place are highlighted in yellow, and letters that are both in the word and in the correct position appear in green. If a letter appears more than once, an additional yellow or green highlight will be shown as needed.\nYour score for Leagues and Leaderboards depends on the attempt in which you guess the word:\n\n1st Attempt → 6 Points\n2nd Attempt → 5 Points\n3rd Attempt → 3 Points\n4th Attempt → 2 Points\n5th Attempt → 2 Points\n6th Attempt → 1 Point\nFail to guess → -3 Points\n\n Once you make your first guess, be sure to finish. If you don’t complete the puzzle by the end of the day, you’ll receive a –3 point penalty.</string>
 </resources>
